[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/maze/Maze.gd" type="Script" id=1]
[ext_resource path="res://scripts/maze/Camera.gd" type="Script" id=2]
[ext_resource path="res://resources/TitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/SettingsContent.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/SettingsGroup.tres" type="DynamicFont" id=5]
[ext_resource path="res://scripts/maze/Settings.gd" type="Script" id=6]
[ext_resource path="res://resources/maze/MazeSizeButtonGroup.tres" type="ButtonGroup" id=7]
[ext_resource path="res://resources/maze/MazeTypeButtonGroup.tres" type="ButtonGroup" id=8]
[ext_resource path="res://resources/maze/direction.png" type="Texture" id=9]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="CanvasItemMaterial" id=3]

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.358368, 0.933581, 0, -0.933581, 0.358368, 0, 15, 7.5 )
far = 3000.0
script = ExtResource( 2 )

[node name="Maze" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.314509, -0.392947, 0.864105, -0.134396, 0.919561, 0.369249, -0.939693, 1.40025e-08, -0.34202, 6.25358, 5.10245, 0 )

[node name="Path" type="Spatial" parent="."]

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.358521
margin_top = 0.440125
margin_right = 0.358521
margin_bottom = 0.440125
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSpent" type="Label" parent="GUI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
text = "Time Spent"

[node name="UpIndicator" type="TextureRect" parent="GUI"]
material = SubResource( 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -169.0
margin_top = -170.0
margin_right = 28.0
margin_bottom = 27.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 98.5, 98.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownIndicator" type="TextureRect" parent="GUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -169.0
margin_top = -125.0
margin_right = 28.0002
margin_bottom = 72.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 98.5, 98.5 )
texture = ExtResource( 9 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftIndicator" type="TextureRect" parent="GUI"]
material = SubResource( 2 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -214.0
margin_top = -150.0
margin_right = -16.9999
margin_bottom = 47.0
rect_rotation = -90.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 98.5, 98.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightIndicator" type="TextureRect" parent="GUI"]
material = SubResource( 3 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = -150.0
margin_right = 73.0
margin_bottom = 47.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 98.5, 98.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndicationLabel" type="Label" parent="GUI"]
visible = false
margin_left = 11.0
margin_top = 578.0
margin_right = 188.0
margin_bottom = 592.0
text = "Press ESC to access options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Settings/Panel/VBoxContainer"]
margin_right = 904.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="SizeSelection" type="HBoxContainer" parent="Settings/Panel/VBoxContainer"]
margin_top = 42.0
margin_right = 904.0
margin_bottom = 82.0

[node name="Size" type="Label" parent="Settings/Panel/VBoxContainer/SizeSelection"]
margin_top = 10.0
margin_right = 206.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Size"

[node name="TinySize" type="CheckButton" parent="Settings/Panel/VBoxContainer/SizeSelection"]
margin_left = 210.0
margin_right = 323.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
group = ExtResource( 7 )
text = "Tiny"

[node name="SmallSize" type="CheckButton" parent="Settings/Panel/VBoxContainer/SizeSelection"]
margin_left = 327.0
margin_right = 451.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
group = ExtResource( 7 )
text = "Small"

[node name="RegularSize" type="CheckButton" parent="Settings/Panel/VBoxContainer/SizeSelection"]
margin_left = 455.0
margin_right = 597.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
pressed = true
group = ExtResource( 7 )
text = "Regular"

[node name="LargeSize" type="CheckButton" parent="Settings/Panel/VBoxContainer/SizeSelection"]
margin_left = 601.0
margin_right = 727.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
group = ExtResource( 7 )
text = "Large"

[node name="ExtraLargeSize" type="CheckButton" parent="Settings/Panel/VBoxContainer/SizeSelection"]
margin_left = 731.0
margin_right = 904.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
group = ExtResource( 7 )
text = "Extra Large"

[node name="TypeSelection" type="HBoxContainer" parent="Settings/Panel/VBoxContainer"]
margin_top = 86.0
margin_right = 904.0
margin_bottom = 126.0

[node name="Type" type="Label" parent="Settings/Panel/VBoxContainer/TypeSelection"]
margin_top = 10.0
margin_right = 452.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Type"

[node name="Twisted" type="CheckButton" parent="Settings/Panel/VBoxContainer/TypeSelection"]
margin_left = 456.0
margin_right = 597.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
group = ExtResource( 8 )
text = "Twisted"

[node name="Normal" type="CheckButton" parent="Settings/Panel/VBoxContainer/TypeSelection"]
margin_left = 601.0
margin_right = 740.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
pressed = true
group = ExtResource( 8 )
text = "Normal"

[node name="Elongated" type="CheckButton" parent="Settings/Panel/VBoxContainer/TypeSelection"]
margin_left = 744.0
margin_right = 904.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
group = ExtResource( 8 )
text = "Elongated"

[node name="ActionButton" type="HBoxContainer" parent="Settings/Panel/VBoxContainer"]
margin_top = 130.0
margin_right = 904.0
margin_bottom = 480.0
size_flags_vertical = 3
alignment = 2

[node name="Play" type="Button" parent="Settings/Panel/VBoxContainer/ActionButton"]
margin_left = 729.0
margin_top = 325.0
margin_right = 779.0
margin_bottom = 350.0
size_flags_vertical = 8
custom_fonts/font = ExtResource( 5 )
text = "Play"

[node name="Cancel" type="Button" parent="Settings/Panel/VBoxContainer/ActionButton"]
margin_left = 783.0
margin_top = 325.0
margin_right = 854.0
margin_bottom = 350.0
size_flags_vertical = 8
custom_fonts/font = ExtResource( 5 )
text = "Cancel"

[node name="Exit" type="Button" parent="Settings/Panel/VBoxContainer/ActionButton"]
margin_left = 858.0
margin_top = 325.0
margin_right = 904.0
margin_bottom = 350.0
size_flags_vertical = 8
custom_fonts/font = ExtResource( 5 )
text = "Exit"

[node name="Wining" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinText" type="Label" parent="Wining"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Completed in
XXX seconds"
align = 1
valign = 1

[connection signal="toggled" from="Settings/Panel/VBoxContainer/SizeSelection/TinySize" to="Settings" method="_on_TinySize_toggled"]
[connection signal="toggled" from="Settings/Panel/VBoxContainer/SizeSelection/SmallSize" to="Settings" method="_on_SmallSize_toggled"]
[connection signal="toggled" from="Settings/Panel/VBoxContainer/SizeSelection/RegularSize" to="Settings" method="_on_RegularSize_toggled"]
[connection signal="toggled" from="Settings/Panel/VBoxContainer/SizeSelection/LargeSize" to="Settings" method="_on_LargeSize_toggled"]
[connection signal="toggled" from="Settings/Panel/VBoxContainer/SizeSelection/ExtraLargeSize" to="Settings" method="_on_ExtraLargeSize_toggled"]
[connection signal="toggled" from="Settings/Panel/VBoxContainer/TypeSelection/Twisted" to="Settings" method="_on_Twisted_toggled"]
[connection signal="toggled" from="Settings/Panel/VBoxContainer/TypeSelection/Normal" to="Settings" method="_on_Normal_toggled"]
[connection signal="toggled" from="Settings/Panel/VBoxContainer/TypeSelection/Elongated" to="Settings" method="_on_Elongated_toggled"]
[connection signal="pressed" from="Settings/Panel/VBoxContainer/ActionButton/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Settings/Panel/VBoxContainer/ActionButton/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Settings/Panel/VBoxContainer/ActionButton/Exit" to="." method="_on_Exit_pressed"]
